[gd_scene load_steps=2 format=3 uid="uid://7ycbxy86fjij"]

[ext_resource type="Script" path="res://scripts/main/settings.gd" id="1_2koos"]

[node name="Settings" type="Control" groups=["no_pause", "scan_lines"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2koos")

[node name="scanlines" type="CheckButton" parent="."]
layout_mode = 0
offset_top = 32.0
offset_right = 124.0
offset_bottom = 63.0
text = "scan lines"

[node name="back_button" type="Button" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 70.0
offset_right = 73.0
offset_bottom = 101.0
text = "confirm"

[node name="fullscreen" type="CheckButton" parent="."]
layout_mode = 0
offset_right = 44.0
offset_bottom = 24.0
text = "fullscreen"

[connection signal="toggled" from="scanlines" to="." method="_on_scan_lines_toggled"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
[connection signal="toggled" from="fullscreen" to="." method="_on_fullscreen_toggled"]
